--- a/src/components/MovieInfo/MovieInfo.css
+++ b/src/components/MovieInfo/MovieInfo.css
@@ -1,11 +1,11 @@
-.movieInfo{
+.info{
     background: transparent;
     box-shadow: 0 0 20px 0 rgb(0 0 0 / 50%);
     padding: 10px 0 15px 15px;
     border-radius: 4px;
 }
 .title{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .title h1{
     font-weight: normal;
@@ -27,7 +27,6 @@
 }
 .left-column{
     width: 300px;
-    /*margin-right: 20px;*/
 }
 .poster img{
     border-radius: 4px 4px 0 0;
@@ -64,6 +63,13 @@
     padding: 4px 4px 4px 4px;
     box-sizing: border-box;
 }
+.box{
+    display: flex;
+    justify-content: space-around;
+}
+.movieGenres h2, .tvGenres h2{
+    font-weight: normal;
+}
 .genre-box{
     width: 100%;
     height: 100%;
@@ -86,6 +92,7 @@
 }
 .genre a{
     text-decoration: none;
+    color: #432bd7;
     border-bottom: 1px solid #7d7d7d;
     transition-duration: 0.4s;
 }
@@ -104,10 +111,16 @@
     background: #adaae0;
     box-sizing: border-box;
     padding: 10px;
+    margin-bottom: 20px;
 }
 .overview h2{
     font-weight: normal;
     font-size: 18px;
+}
+.trailer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
