--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,15 @@ body {
   margin: 0 auto;
   position: relative;
   box-sizing: border-box;
-  font: 14px 'Ubuntu', Geneva, sans-serif;
+  font: 14px 'Helvetica Neue', Geneva, sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
